Fix overflow issues

--- a/styles/base/_layout.scss
+++ b/styles/base/_layout.scss
@@ -58,6 +58,6 @@ input[type="text"],
 input[type="date"],
 textarea, select {
   border: 1px solid lightgray;
-  padding: 0.4rem;
+  padding: 0.7rem;
   border-radius: 0.2rem;
 }
