--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -20,7 +20,7 @@
     margin: 0 auto;
     padding: 2rem 2rem 1rem;
     position: relative;
-    overflow: scroll;
+    overflow: auto;
 
     #modal-close {
       position: absolute;
@@ -43,6 +43,7 @@
   form {
     display: flex;
     flex-direction: column;
+    overflow: unset;
 
     > * {
       margin-bottom: 1rem;
@@ -62,7 +63,7 @@
         }
 
         input {
-          flex-shrink: 0;
+          flex-shrink: 0.3;
         }
       }
 
