--- a/styles/components/_todo_list.scss
+++ b/styles/components/_todo_list.scss
@@ -4,7 +4,7 @@
   max-width: 800px;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
   
   .todo-item {
